# musashi_ws

./: cartographer_install.sh  global_trajectory.csv  install.sh  my_laser_config.yaml  network_config.sh  rplidar_ros_install.sh  setup_port.sh  start_creating_map.sh  start_navigation.sh  start_pure_localization.sh  start_robot.sh  start_slam.sh  trajectory_with_rpm.csv
.catkin_tools/profiles/default/: devel_collisions.txt
installation/: cartographer_install.sh  ros_install.sh  rplidar_ros_install.sh  run_controller_node.sh
src/cartographer_config/configuration_files/: lumi_carto_pure_localization.lua  lumi_carto_slam_only_lidar.lua
src/cartographer_config/launch/: lumi_carto_pure_localization.launch  lumi_carto_slam_only_lidar.launch
src/cartographer_config/maps/: E-building.pbstream  Musashi_factory.pbstream  map.pbstream
src/logger/src/: logger.cpp
src/nitrabot/: CMakeLists.txt  README.md  package.xml
src/nitrabot/config/: obstacle_detector.yaml
src/nitrabot/include/: pure_pursuit.h
src/nitrabot/launch/: bringup.launch  navigation.launch  sim.launch
src/nitrabot/rviz/: navigation_with_map.rviz
src/nitrabot/src/: controller_node.cpp  (+3 more)
src/perception/: CMakeLists.txt  README.md  package.xml
src/robot_communication/: CMakeLists.txt  package.xml
src/sdv_msgs/: CMakeLists.txt  package.xml
src/test/: CMakeLists.txt  package.xml
src/trajectory_generation/: CMakeLists.txt  README.md  package.xml
src/utilities/: CMakeLists.txt  README.md  package.xml
src/utilities/include/utilities/: utilities.h
src/utilities/src/: utilities.cpp
(+20 files in other folders)
